--- a/control.html
+++ b/control.html
@@ -108,7 +108,7 @@ if (annyang) {
 	annyang.debug(true);
 	var oReq = new XMLHttpRequest();
 	oReq.onload = reqListener;
-	oReq.open("get", "/HackBushwick2014/Content/QandA.json", true);
+	oReq.open("get", "https://patrickms.github.io/HackBushwick2014/Content/QandA.json", true);
 	oReq.send();
 
   // Start listening. You can call this here, or attach this call to an event, button, etc.
