--- a/control.html
+++ b/control.html
@@ -81,6 +81,7 @@ function headManager (event) {
 						{
 							var utterance = new SpeechSynthesisUtterance(answer);
 							utterance.onend=restartRecognitionIfFace;
+							anyang.abort();
 							window.speechSynthesis.speak(utterance);
 						}
 						
@@ -103,6 +104,7 @@ function createCommand(question, answer, url)
 						{
 							var utterance = new SpeechSynthesisUtterance(answer);
 							utterance.onend=restartRecognitionIfFace;
+							anyang.abort();
 							window.speechSynthesis.speak(utterance);
 						}
 						
